new filter button fixes
